# api/docs/openapi.json
@@ -342,7 +342,7 @@
             "description": "时间范围"
           },
           {
-            "name": "date",
+            "name": "start_date",
             "in": "query",
             "required": false,
             "schema": {
@@ -354,10 +354,28 @@
                   "type": "null"
                 }
               ],
-              "description": "具体日期(格式: YYYYMMDD)",
-              "title": "Date"
+              "description": "开始日期(格式: YYYYMMDD)",
+              "title": "Start Date"
             },
-            "description": "具体日期(格式: YYYYMMDD)"
+            "description": "开始日期(格式: YYYYMMDD)"
+          },
+          {
+            "name": "end_date",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "description": "结束日期(格式: YYYYMMDD)",
+              "title": "End Date"
+            },
+            "description": "结束日期(格式: YYYYMMDD)"
           }
         ],
         "responses": {
@@ -459,7 +477,7 @@
             "description": "时间范围"
           },
           {
-            "name": "date",
+            "name": "start_date",
             "in": "query",
             "required": false,
             "schema": {
@@ -471,10 +489,28 @@
                   "type": "null"
                 }
               ],
-              "description": "具体日期(格式: YYYYMMDD)",
-              "title": "Date"
+              "description": "开始日期(格式: YYYYMMDD)",
+              "title": "Start Date"
             },
-            "description": "具体日期(格式: YYYYMMDD)"
+            "description": "开始日期(格式: YYYYMMDD)"
+          },
+          {
+            "name": "end_date",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "description": "结束日期(格式: YYYYMMDD)",
+              "title": "End Date"
+            },
+            "description": "结束日期(格式: YYYYMMDD)"
           }
         ],
         "responses": {
@@ -653,7 +689,7 @@
             "description": "时间范围"
           },
           {
-            "name": "date",
+            "name": "start_date",
             "in": "query",
             "required": false,
             "schema": {
@@ -665,10 +701,28 @@
                   "type": "null"
                 }
               ],
-              "description": "具体日期(格式: YYYYMMDD)",
-              "title": "Date"
+              "description": "开始日期(格式: YYYYMMDD)",
+              "title": "Start Date"
             },
-            "description": "具体日期(格式: YYYYMMDD)"
+            "description": "开始日期(格式: YYYYMMDD)"
+          },
+          {
+            "name": "end_date",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "description": "结束日期(格式: YYYYMMDD)",
+              "title": "End Date"
+            },
+            "description": "结束日期(格式: YYYYMMDD)"
           }
         ],
         "responses": {
@@ -799,7 +853,7 @@
             "description": "时间范围"
           },
           {
-            "name": "date",
+            "name": "start_date",
             "in": "query",
             "required": false,
             "schema": {
@@ -811,10 +865,28 @@
                   "type": "null"
                 }
               ],
-              "description": "具体日期(格式: YYYYMMDD)",
-              "title": "Date"
+              "description": "开始日期(格式: YYYYMMDD)",
+              "title": "Start Date"
             },
-            "description": "具体日期(格式: YYYYMMDD)"
+            "description": "开始日期(格式: YYYYMMDD)"
+          },
+          {
+            "name": "end_date",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "description": "结束日期(格式: YYYYMMDD)",
+              "title": "End Date"
+            },
+            "description": "结束日期(格式: YYYYMMDD)"
           },
           {
             "name": "brand",
@@ -1201,7 +1273,7 @@
             "description": "时间范围"
           },
           {
-            "name": "date",
+            "name": "start_date",
             "in": "query",
             "required": false,
             "schema": {
@@ -1213,10 +1285,28 @@
                   "type": "null"
                 }
               ],
-              "description": "具体日期(格式: YYYYMMDD)",
-              "title": "Date"
+              "description": "开始日期(格式: YYYYMMDD)",
+              "title": "Start Date"
             },
-            "description": "具体日期(格式: YYYYMMDD)"
+            "description": "开始日期(格式: YYYYMMDD)"
+          },
+          {
+            "name": "end_date",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "description": "结束日期(格式: YYYYMMDD)",
+              "title": "End Date"
+            },
+            "description": "结束日期(格式: YYYYMMDD)"
           }
         ],
         "responses": {
